[package]
name = "game-jam-larva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["jpeg"] }
bevy-inspector-egui = "0.13.0"
iyes_loopless = { version="0.7.1", default-features=false, features=["app", "states", "bevy-inspector-egui"] }
rand = "0.8.5"
glob = "0.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
