[package]
name = "game-jam-larva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.13.0"
iyes_loopless = { version="0.7.1", default-features=false, features=["app", "states", "bevy-inspector-egui"] }
rand = "0.8.5"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  "render",
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11",
  "jpeg"
]

[dependencies.bevy_kira_audio]
version = "0.12.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
features = [
  "mp3",
]

[build-dependencies]
embed-resource = "1.6.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
